welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:-6: error: Missing closing brace `}' assumed here
try {
^parotTrouble:1: error: expected class or object definition
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
^